change style to verify success build

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .widget-container {
-  background-color: lightgrey;
+  background-color: lightskyblue;
   height: 100%;
   left: 0;
   position: absolute;
