--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .widget-container {
-  background-color: lightskyblue;
+  background-color: #eff4f8;
   height: 100%;
+  width: 95%;
   left: 0;
   position: absolute;
   top: 0;
