--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,24 @@
   margin-bottom: 16px;
 }
 
+button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  color: #1e1f1f;
+  background-color: transparent;
+  background-image: none;
+  border-color: #6c757d;
+}
+
 .btn-container > button {
   width: 30px;
   height: 30px;
