--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@
 }
 
 button {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 400;
   text-align: center;
   white-space: nowrap;
